# spirit

./: .travis.yml  CMakeLists.txt  README.md  conf.py  index.rst
.github/workflows/: ci.yml
VFRendering/include/VFRendering/: Geometry.hxx
core/: CMakeLists.txt
core/docs/: Methods.md
core/docs/c-api/: Geometry.md  Parameters_MC.md
core/include/: CMakeLists.txt
core/src/: CMakeLists.txt
core/test/: test_aggregation.cpp  test_anisotropy.cpp  test_api.cpp  test_configparser.cpp  test_ema.cpp  test_io.cpp  test_mc.cpp  test_physics.cpp  test_pinning.cpp  test_solvers.cpp
docs/: CONTRIBUTORS.md
input/: input.cfg  problem1_256x64.ovf  problem3_flower_32.ovf  problem3_vortex_32.ovf  relaxed_problem4_256x64.ovf
shaders/: Apply0.comp  Apply0.spv  Apply1.comp  Apply1.spv  Apply2.comp  Apply3.comp  Apply3.spv  ApplyCG1.comp  ApplyCG1.spv  ApplyCG2_double.comp  ApplyCG2_double.spv  ApplyCG2_float.comp  ApplyCG2_float.spv  ApplyCross.spv  ApplyDepondt1.spv  ApplyDepondt1_double.comp  ApplyDepondt1_double.spv  ApplyDepondt1_float.comp  ApplyDepondt1_float.spv  ApplyDepondt2.spv  ApplyDepondt2_double.comp  ApplyDepondt2_double.spv  ApplyDepondt2_float.comp  ApplyDepondt2_float.spv  ApplyLBFGS1.comp  ApplyLBFGS1.spv  ApplyLBFGS2.comp  ApplyLBFGS2.spv  ApplyLBFGS3.comp  ApplyLBFGS3.spv  ApplyLBFGS4.comp  ApplyLBFGS4.spv  ApplyLBFGS5.comp  ApplyLBFGS5.spv  ApplyLBFGS6.comp  ApplyLBFGS6.spv  ApplyLBFGS7.comp  ApplyLBFGS7.spv  ApplyLBFGS8.spv  ApplyLBFGS8_double.comp  (+69 more)
ui-cpp/: main.cpp
ui-cpp-nanogui/: CMakeLists.txt  main.cpp
ui-cpp-nanogui/include/: MainScreen.hpp  SimulationWidget.hpp  SpinWidget.hpp
ui-cpp-nanogui/src/: CMakeLists.txt  MainScreen.cpp  SimulationWidget.cpp  SpinWidget.cpp
ui-cpp-nanogui/utility/: StateCapsule.hpp
ui-cpp-nanogui/utility/include/: AdvancedGraph.hpp
ui-cpp-nanogui/utility/src/: AdvancedGraph.cpp
ui-cpp/include/: ControlWidget.hpp  HamiltonianHeisenbergWidget.hpp  HamiltonianMicromagneticWidget.hpp  IsosurfaceWidget.hpp  MainWindow.hpp  SpinWidget.hpp  VisualisationSettingsWidget.hpp
ui-cpp/src/: ControlWidget.cpp  HamiltonianHeisenbergWidget.cpp  HamiltonianMicromagneticWidget.cpp  InfoWidget.cpp  IsosurfaceWidget.cpp  MainWindow.cpp  ParametersWidget.cpp  SettingsWidget.cpp  SpinWidget.cpp  VisualisationSettingsWidget.cpp
ui-cpp/ui/: ControlWidget.ui  HamiltonianHeisenbergWidget.ui  HamiltonianMicromagneticWidget.ui  ParametersWidget.ui  VisualisationSettingsWidget.ui
ui-web/: CMakeLists.txt
(+171 files in other folders)
